syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ProjetoPixGrpc";

package br.com.zup;
import "google/protobuf/timestamp.proto";

service PixRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service PixDeletaGrpcService {
  rpc deleta(DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

service PixBuscaGrpcService {
  rpc busca(BuscaChavePixRequest) returns (BuscaChavePixResponse) {}
}

service PixListaGrpcService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

/*
*! Registra Chave Pix:
*/
enum ChaveEnum {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum ContaEnum {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  ChaveEnum tipoChave = 2;
  string chave = 3;
  ContaEnum tipoConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

/*
*! Deleta Chave Pix:
*/
message DeletaChavePixRequest {
  string pixId = 1;
  string clientId = 2;
}

message DeletaChavePixResponse {
  string pixId = 1;
  string clientId = 2;
}

/*
*! Busca dados Chave Pix:
*/
message BuscaChavePixRequest {
  message FiltroPorPixId {
    string pixId = 1;
    string clienteId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message BuscaChavePixResponse {
  message Chave {
    ChaveEnum tipoChave = 1;
    string chave = 2;
    ContaEnum tipoConta = 3;
    Conta conta = 4;
    google.protobuf.Timestamp criadaEm = 5;

    message Conta {
      string instituicao = 1;
      string nomeTitular = 2;
      string cpfTitular = 3;
      string agencia = 4;
      string numeroConta = 5;
    }
  }

  string pixId = 1;
  string clienteId = 2;
  Chave dadosChave = 3;
}

/*
*! Lista as Chaves Pix:
*/
message ListaChavesPixRequest {
  string clienteId = 1;
}

message ListaChavesPixResponse {
  message Chave {
    string pixId = 1;
    ChaveEnum tipoChave = 3;
    string chave = 4;
    ContaEnum tipoConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }

  string clienteId = 1;
  repeated Chave chaves = 2;
}